lgtm.yml: update for new locations

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -1,7 +1,7 @@
 path_classifiers:
   library:
-    - utils/lit
-    - libs/none/musl
+    - third_party/lit
+    - third_party/musl
   docs:
     - README.md
     - LICENSE.txt
