libnone: disable patches that don't apply (experimentally)

--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -9,7 +9,7 @@ set(MUSL_SRC "${PROJECT_SOURCE_DIR}/third_party/musl")
 set(MUSL_PATCHES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/musl-patches")
 
 set(MUSL_PATCHES
-  ${MUSL_PATCHES_DIR}/0005-Another-weak_alias-victim-destructors-for-stdio-and-.patch
+  #${MUSL_PATCHES_DIR}/0005-Another-weak_alias-victim-destructors-for-stdio-and-.patch
   ${MUSL_PATCHES_DIR}/0009-configure-don-t-force-disable-unwind-tables-let-TC-d.patch
   ${MUSL_PATCHES_DIR}/0010-configure-don-t-add-fomit-frame-pointer.patch
 )
@@ -17,11 +17,11 @@ set(MUSL_PATCHES
 set(MUSL_CFLAGS_EXTRA "")
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
   # Bug in LLVM 7.0 causes compiler to crash!
-  if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7.0)
-    list(APPEND MUSL_PATCHES
-      ${MUSL_PATCHES_DIR}/0001-Build-with-fPIC-large-code-model-to-workaround-RTDyL.patch
-    )
-  endif()
+  #if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7.0)
+  #  list(APPEND MUSL_PATCHES
+  #    ${MUSL_PATCHES_DIR}/0001-Build-with-fPIC-large-code-model-to-workaround-RTDyL.patch
+  #  )
+  #endif()
   # Don't complain about 'unused' arguments
   # This happens when building assembly files using same CFLAGS used for C files,
   # lots of them don't make any sense for assembly code so they go unused.
