cmake: enable assertions, warnings, before sourcing llvm's bits

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,13 +29,16 @@ if( ${PYTHON_VERSION_STRING} VERSION_LESS 2.7 )
   message(FATAL_ERROR "Python 2.7 or newer is required")
 endif()
 
+set(LLVM_BUILD_TOOLS ON)
+set(LLVM_ENABLE_ASSERTIONS ON)
+set(LLVM_ENABLE_WARNINGS ON)
+
 list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 include(AddLLVM)
 include(HandleLLVMOptions)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(LLVM_BUILD_TOOLS ON)
 
 find_package( ZLIB REQUIRED )
 
