alld: gut, lld does what we need even more so these days :)

--- a/tools/alld/CMakeLists.txt
+++ b/tools/alld/CMakeLists.txt
@@ -6,24 +6,19 @@ target_link_libraries(alld PRIVATE ResourcePaths lldELF lldCommon)
 
 llvm_config(alld
 # These are taken directly from lld/ELF/CMakeLists.txt:
-  ${LLVM_TARGETS_TO_BUILD}
-  Analysis
-  BitReader
-  BitWriter
-  Codegen
-  Core
-  DebugInfoDWARF
-  Demangle
-  IPO
-  Linker
-  LTO
-  Object
-  Option
-  Passes
-  MC
-  Support
-  Target
-  TransformUtils
+#${LLVM_TARGETS_TO_BUILD}
+  #  BinaryFormat
+  #  BitWriter
+  #  Core
+  #  DebugInfoDWARF
+  #  LTO
+  #  MC
+  #  Object
+  #  Option
+  #  Support
+
+  #DEPENDS
+  #ELFOptionsTableGen
 )
 
 add_definitions(${LLVM_DEFINITIONS})
