--- a/tools/alld/CMakeLists.txt
+++ b/tools/alld/CMakeLists.txt
@@ -5,17 +5,17 @@ add_llvm_tool(alld
 target_link_libraries(alld PRIVATE ResourcePaths lldELF lldCommon)
 
 llvm_config(alld
-# These are taken directly from lld/ELF/CMakeLists.txt:
-#${LLVM_TARGETS_TO_BUILD}
-  #  BinaryFormat
-  #  BitWriter
-  #  Core
-  #  DebugInfoDWARF
-  #  LTO
-  #  MC
-  #  Object
-  #  Option
-  #  Support
+  # These are taken directly from lld/ELF/CMakeLists.txt:
+  ${LLVM_TARGETS_TO_BUILD}
+     BinaryFormat
+     BitWriter
+     Core
+     DebugInfoDWARF
+     LTO
+     MC
+     Object
+     Option
+     Support
 
   #DEPENDS
   #ELFOptionsTableGen
