nocheck, cmake install tweak?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,7 +124,7 @@ include_directories (BEFORE
   ${ALLVM_GEN_INCLUDE_DIR}
 )
 
-install(DIRECTORY ${ALLVM_INCLUDE_DIR}/ ${ALVM_GEN_INCLUDE_DIR}/
+install(DIRECTORY ${ALLVM_INCLUDE_DIR}/allvm ${ALVM_GEN_INCLUDE_DIR}/allvm
   DESTINATION include
   COMPONENT allvm-headers
   FILES_MATCHING PATTERN "*.h"
