--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,4 +11,5 @@ jobs:
     - uses: cachix/cachix-action@v2
       with:
         name: allvm
+        file: nix/release.nix
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
