--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
       matrix:
        variant: [default, musl]
        compiler: [clang4, clang5, clang6, clang7, clang8, clang9, gcc7, gcc8, gcc9]
+      max-parallel: 2
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
