test.yml: run 'default' job before attempting full matrix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
         name: allvm
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
   compiler-tests:
+    needs: default
     strategy:
       matrix:
        variant: [default, musl]
