--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
        compiler: [clang4, clang5, clang6, clang7, clang8, clang9, gcc7, gcc8, gcc9]
       max-parallel: 2
     runs-on: ubuntu-latest
-    name: Build+Test using toolchain ${{ matrix.variant }} ${{ matrix.compiler }}
+    name: ${{ matrix.compiler }} ${{ matrix.variant }} build+test
     steps:
     - uses: actions/checkout@v1
     - uses: cachix/install-nix-action@v3
