--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,10 +16,7 @@ jobs:
     strategy:
       matrix:
        variant: [default, musl]
-       compiler: [clang4, clang5, clang6, clang7, clang8, clang9, gcc7, gcc8, gcc9]
-      max-parallel: 2
     runs-on: ubuntu-latest
-    name: ${{ matrix.compiler }} ${{ matrix.variant }} build+test
     steps:
     - uses: actions/checkout@v1
     - uses: cachix/install-nix-action@v3
@@ -27,5 +24,5 @@ jobs:
       with:
         name: allvm
         file: nix/release.nix 
-        attributes: '${{ matrix.variant }}.allvm-tools-${{ matrix.compiler }}'
+        attributes: '${{ matrix.variant }}'
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
