--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: cachix/install-nix-action@v6
+    - name: Print nix config
+      run: nix show-config
     - uses: cachix/cachix-action@v2
       with:
         name: allvm
