--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -34,7 +34,7 @@ endif()
 
 set(MUSL_CFLAGS_EXTRA "${MUSL_CFLAGS_EXTRA} -fstack-protector-all")
 
-set(MUSL_CFLAGS "-fPIC ${MUSL_CFLAGS_EXTRA}" CACHE string "CFLAGS for building musl")
+set(MUSL_CFLAGS "-fPIC ${MUSL_CFLAGS_EXTRA}" CACHE STRING "CFLAGS for building musl")
 
 set(MUSL_PATCH_COMMANDS COMMAND echo "Applying musl patches...")
 
