libnone: patch to handle NULL AT_RANDOM in auxv
The previous malloc (now "oldmalloc") handled this,
but the new malloc, "mallocng", lacked a similar check.

--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -11,6 +11,7 @@ set(MUSL "musl-${MUSL_VERSION}")
 set(MUSL_PATCHES
   ${MUSL_PATCHES_DIR}/0009-configure-don-t-force-disable-unwind-tables-let-TC-d.patch
   ${MUSL_PATCHES_DIR}/0010-configure-don-t-add-fomit-frame-pointer.patch
+  ${MUSL_PATCHES_DIR}/0001-musl-handle-NULL-AT_RANDOM.patch
 )
 
 set(MUSL_CFLAGS_EXTRA "")
