--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
     needs: default
     strategy:
       matrix:
-       variant: [default, musl]
+       variant: [default, musl.allvm-tools, musl.allvm-tools-gcc9]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
